parslers-benchmark/src/tests/valid/pairs/createPair03.wacc
# create a pair (int, char)

# Output:
# #empty#

# Program:

begin
  pair(int, char) p = newpair(10, 'a')
end
