parslers-benchmark/src/tests/invalid/syntaxErr/pairsExtended/invalidInnerPair.wacc
# Check that inner pairs are correctly parsed

begin
    pair(pair(pair, nonsense), pair(int, a)) a = null
end